--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,14 +25,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Antes
+        run: |
+          echo 'Original >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>'
+          cat connections.json
+          echo 'REPLACE >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>'
+          
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: replace
         run: |
           sed -i 's/__CONNECTION_STRING__/${{secrets.supersecreto}}/g' connections.json
 
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a one-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo 'Final >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>'
+          cat connections.json
